polyglot-core/src/test/resources/grammars/positive/test-epsilon-alt.polyglot
/* Manually contrived to test epsilon at root. */
Package org.anarres.polyglot.test.epsilon;

Tokens

	tok_a = 'a' ;
	tok_b = 'b' ;

Productions

	program =
		{a} tok_a?
			{ -> New program.a() } |
		{b} tok_b
			{ -> New program.b() } ;

Abstract Syntax Tree

	program = {a} | {b} ;

