polyglot-core/src/test/resources/grammars/negative/test-nullable-transform.polyglot
/** ERROR: non-nullable transform prototype */
Package org.anarres.polyglot.test.nullable.transform;

Tokens

	tok_lpar = '(' ;
	tok_rpar = ')' ;
	tok_a = 'a' ;
	tok_b = 'b' ;
	tok_c = 'c' ;

Productions

	expression =
		tok_b [arguments]:arguments_nullable
			{ -> New expression(tok_b, arguments.tok_c) } ;

	arguments_nullable { -> tok_c } =
		tok_lpar tok_c? tok_rpar
			{ -> tok_c } ;

Abstract Syntax Tree

	expression =
		tok_b tok_c ;

